Fixed spacing on endorsements carousel on mobiles

--- a/_scss/components/_endorsements.scss
+++ b/_scss/components/_endorsements.scss
@@ -22,6 +22,10 @@
         color: white;
       }
     }
+
+    @include media-breakpoint-down(sm) {
+      padding-right: 10px;
+    }
   }
 
   .name {
